[gd_scene load_steps=6 format=3 uid="uid://i01paqase5ii"]

[ext_resource type="Script" uid="uid://c83hwukfslhad" path="res://scripts/loby_01.gd" id="1_fjhom"]
[ext_resource type="Texture2D" uid="uid://bvw8c8orbw5ba" path="res://assets/Sprite Pack 6/1 - Penguin/Looking_Up (16 x 16).png" id="1_w56s8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_blcqn"]
atlas = ExtResource("1_w56s8")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjhom"]
atlas = ExtResource("1_w56s8")
region = Rect2(16, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_xk8rn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_blcqn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjhom")
}],
"loop": true,
"name": &"default",
"speed": 0.3
}]

[node name="Loby_01" type="Node2D"]
script = ExtResource("1_fjhom")
metadata/_edit_horizontal_guides_ = [25.0, 245.0]
metadata/_edit_vertical_guides_ = [25.0, 450.0, 311.0, 52.0, 136.0, 58.0]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
offset_left = 27.0
offset_top = 27.0
offset_right = 160.0
offset_bottom = 206.0

[node name="BtnStart" type="Button" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 25.0
offset_top = 69.0
offset_right = 110.0
offset_bottom = 93.0
theme_override_font_sizes/font_size = 11
text = "Start Game"

[node name="BtnRanking" type="Button" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 25.0
offset_top = 97.0
offset_right = 109.0
offset_bottom = 121.0
theme_override_font_sizes/font_size = 11
text = "Ranking"

[node name="BtnExit" type="Button" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 25.0
offset_top = 125.0
offset_right = 110.0
offset_bottom = 149.0
theme_override_font_sizes/font_size = 11
text = "Sair"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CanvasLayer"]
position = Vector2(94, 65)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_xk8rn")
autoplay = "default"
frame_progress = 0.49222028

[node name="RankingPanel" type="Panel" parent="CanvasLayer"]
offset_left = 163.0
offset_top = 27.0
offset_right = 310.0
offset_bottom = 204.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/RankingPanel"]
layout_mode = 0
offset_left = 9.0
offset_top = 9.0
offset_right = 135.0
offset_bottom = 106.0

[node name="LabelTitle" type="Label" parent="CanvasLayer/RankingPanel/VBoxContainer"]
layout_mode = 2
text = "RANKING"
horizontal_alignment = 1

[node name="VBoxRanking" type="VBoxContainer" parent="CanvasLayer/RankingPanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="Button" type="Button" parent="CanvasLayer/RankingPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Close"

[connection signal="pressed" from="CanvasLayer/Panel/BtnStart" to="." method="_on_btn_start_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/BtnRanking" to="." method="_on_btn_ranking_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/BtnExit" to="." method="_on_btn_exit_pressed"]
[connection signal="pressed" from="CanvasLayer/RankingPanel/VBoxContainer/Button" to="." method="_on_button_pressed"]
